fix ui grid overflow

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -44,3 +44,6 @@ video#mainVideo {
   transform: translateY(-50%);
 }
 
+.footerContainer {
+  overflow:hidden;
+}
